added for monorepo

--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "client": "file:",
     "date-fns": "^4.1.0",
+    "msngr_clone": "file:..",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
