--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": " nodemon ./src/index.ts"
+    "dev": " nodemon ./src/index.ts",
+    "build": "tsc",
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
     "express": "^4.21.2",
     "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.2",
+    "msngr_clone": "file:..",
     "prisma": "^6.2.1",
     "server": "file:",
     "socket.io": "^4.8.1",
