--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm install --prefix server && npm install --prefix client && npm run build --prefix client && npm run build --prefix server",
-    "start": "npm run start --prefix backend"
+    "start": "npm run start --prefix server"
   },
   "keywords": [],
   "author": "",
