--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm install --prefix server && npm install --prefix client && npm run build --prefix client && npm run build --prefix server",
+    "build": "npm install --prefix server && npm install --prefix server/client && npm run build --prefix server/client && npm run build --prefix server",
     "start": "npm run start --prefix server"
   },
   "keywords": [],
